--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,6 @@
 <div class="bg">
-    <div class="page-content">
+    <app-phone-nav-menu (menuOn)="menuOn =$event"></app-phone-nav-menu>
+    <div class="page-content" *ngIf="!menuOn">
         <div class="description">
             <p id="title">ABOUT</p>
 
@@ -16,4 +17,6 @@
         </div>
         <app-side-nav> </app-side-nav>
     </div>
+    <app-phone-nav-menu-body [menuOn]="menuOn"></app-phone-nav-menu-body>
+
 </div>
