--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,13 +1,5 @@
-//adding screen sizes
-$desktop: 960px;
-$tablet: 768px;
-$mobile-large: 640px;
-$mobile: 480px;
-$mobile-small: 370px;
 //css
 .bg {
-    width: 100vw;
-    height: 100vh;
     background: linear-gradient(
             90deg,
             rgba(255, 255, 255, 0) 30%,
@@ -17,13 +9,12 @@ $mobile-small: 370px;
         url(../../assets/About.jpg) no-repeat center;
     background-size: cover;
 }
-        .description {
-            padding: 5px;
-            text-align: left;
-            color: #859EAC;
-
-            font-family: "century-gothic";
-            font-size: 18px;
-        }
-
-
+.description {
+    font-size: 18px;
+}
+@media only screen and (max-width: 768px) {
+    .bg {
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0.7) 30%, rgba(255, 255, 255, 0.85) 100%),
+            url(../../assets/AboutPhone.jpg) no-repeat center;
+    }
+}
