--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="bg">
-    <div class="page-content">
+    <app-phone-nav-menu (menuOn)="menuOn =$event"></app-phone-nav-menu>
+    <div class="page-content" *ngIf="!menuOn">
         <div class="description">
             <div id="buttons">
                 <a routerLink="schedule">
@@ -12,4 +13,5 @@
         </div>
         <app-side-nav> </app-side-nav>
     </div>
+    <app-phone-nav-menu-body [menuOn]="menuOn"></app-phone-nav-menu-body>
 </div>
