--- a/src/app/retreats/retreats.component.html
+++ b/src/app/retreats/retreats.component.html
@@ -1,5 +1,7 @@
 <div class="bg">
-    <div class="page-content">
+    <app-phone-nav-menu (menuOn)="menuOn =$event"></app-phone-nav-menu>
+
+    <div class="page-content" *ngIf="!menuOn">
         <div class="description">
             <div *ngIf="!submitted">
                 <p id="title">RETREAT DETAILS</p>
@@ -124,4 +126,6 @@
         </div>
         <app-side-nav> </app-side-nav>
     </div>
+    <app-phone-nav-menu-body [menuOn]="menuOn"></app-phone-nav-menu-body>
+
 </div>
