--- a/src/app/retreats/retreats.component.scss
+++ b/src/app/retreats/retreats.component.scss
@@ -1,13 +1,5 @@
-//adding screen sizes
-$desktop: 960px;
-$tablet: 768px;
-$mobile-large: 640px;
-$mobile: 480px;
-$mobile-small: 340px;
 //css
 .bg {
-    width: 100vw;
-    height: 100vh;
     background: linear-gradient(
             90deg,
             rgba(255, 255, 255, 0) 30%,
@@ -18,25 +10,11 @@ $mobile-small: 340px;
     background-size: cover;
 }
 .description {
-    padding: 5px 10px 5px 10px;
-    text-align: left;
-    color: #859EAC;
-
-    font-family: "century-gothic";
-    font-size: 12px;
-    .invalid-feedback{
+    .invalid-feedback {
         margin-top: 5px;
         color: rgb(201, 1, 1);
         font-size: 10px;
     }
-
-    // #title {
-    //     font-family: "oswald";
-    //     font-size: 30px;
-    //     margin: 0px 0px 0px 0px;
-    //     text-align: center;
-    //     color: #859EAC;
-    // }
     #details {
         background-color: rgba(255, 255, 255, 0.8);
         padding: 10px;
@@ -44,7 +22,7 @@ $mobile-small: 340px;
 
     button {
         border: hidden;
-        background-color: #859EAC;
+        background-color: #859eac;
         border-radius: 10px;
         color: white;
         padding: 10px;
@@ -61,8 +39,8 @@ $mobile-small: 340px;
             margin: 5px;
             display: flex;
             flex-direction: column;
-            &:focus { 
-                border: solid 1px #859EAC;
+            &:focus {
+                border: solid 1px #859eac;
             }
             .accomodation-name {
                 text-align: center;
@@ -92,9 +70,51 @@ $mobile-small: 340px;
             justify-content: center;
             p {
                 margin-right: 5px;
-                font-family: "segoe-script";
                 font-size: 16px;
             }
         }
+    }
+}
+input {
+    // border-radius: 4px;
+    border: none;
+    padding: 5px;
+    margin-top: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: #9bacba;
+}
+input[type="radio"]:after {
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    // top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #d1d3d1;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+
+input[type="radio"]:checked:after {
+    width: 10px;
+    height: 10px;
+    border-radius: 10px;
+    // top: -2px;
+    left: -1px;
+    position: relative;
+    background-color: #859eac;
+    content: "";
+    display: inline-block;
+    visibility: visible;
+    border: 2px solid white;
+}
+@media only screen and (max-width: 768px) {
+    .bg {
+        background: linear-gradient(90deg, rgba(255, 255, 255, 0.7) 30%, rgba(255, 255, 255, 0.85) 100%),
+            url(../../assets/ContactPhone.jpg) no-repeat center;
     }
 }
