--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,58 +1,16 @@
 <div class="bg">
-    <div class="page-content">
-        <div class="description">
-            <p id="title">SCHEDULE</p>
-            <br>
-            <ul>
-                <p id="subtitle">Osana</p>
-                <li>
-                    <p>Monday </p>
-                    <p>Ashtanga Vinyasa(led) </p>
-                    <p>7:15 AM</p><a href="http://www.osanawellness.com/schedule/">BOOK</a>
-                </li>
-                <li>
-                    <p>Saturday </p>
-                    <p>Ashtanga Vinyasa(led) </p>
-                    <p>7:45 PM</p><a href="http://www.osanawellness.com/schedule/">BOOK</a>
-                </li>
-            </ul>
-            <ul>
-                <p id="subtitle">Flexana</p>
-                <li>
-                    <p>Saturday </p>
-                    <p>Ashtanga Vinyasa(Mysore) </p>
-                    <p>5:00 PM</p><a href="http://flexanaegypt.com/">BOOK</a>
-                </li>
-            </ul>
-            <ul>
-                <p id="subtitle">Brass Monkeys</p>
-                <li>
-                    <p>Monday </p>
-                    <p>Backbending& healthy spine </p>
-                    <p>9:30 PM</p><a href="https://www.instagram.com/brassmonkeysstudios/">BOOK</a>
-                </li>
-            </ul>
-            <p id="title">PROGRAMS</p>
-            <br>
-            <ul>
-                <p id="subtitle">Ananda Community</p>
-                <li>
-                    <p>Monday </p>
-                    <p>Ashtanga Vinyasa(Mysore) </p>
-                    <p>7:00 PM</p><a href="https://www.instagram.com/ananda.community/">BOOK</a>
-                </li>
-                <li>
-                    <p>Friday </p>
-                    <p>Ashtanga Vinyasa(Led) </p>
-                    <p>12:30 PM</p><a href="https://www.instagram.com/ananda.community/">BOOK</a>
-                </li>
-                <li>
-                    <p>Saturady </p>
-                    <p>Ashtanga Vinyasa(Led) </p>
-                    <p>12:30 PM</p><a href="https://www.instagram.com/ananda.community/">BOOK</a>
-                </li>
-            </ul>
-        </div>
-        <app-side-nav> </app-side-nav>
-    </div>
+    <app-phone-nav-menu (menuOn)="menuOn =$event"></app-phone-nav-menu>
+
+	<div class="page-content" *ngIf="!menuOn">
+		<div class="description">
+			<full-calendar *ngIf="calendarOptions" #fullcalendar [options]="calendarOptions">
+				<ng-template #eventContent let-arg>
+					<b>{{ arg.event.title }}</b> - {{ arg.event.start.getDate() }}
+				</ng-template>
+			</full-calendar>
+		</div>
+		<app-side-nav> </app-side-nav>
+	</div>
+    <app-phone-nav-menu-body [menuOn]="menuOn"></app-phone-nav-menu-body>
+
 </div>
